--- a/src/app/main-pages/board/board.component.scss
+++ b/src/app/main-pages/board/board.component.scss
@@ -10,7 +10,7 @@
 
 .board-container {
   padding: min(3%, 30px) min(3%, 80px);
-  height: calc(100vh - 96px);
+  height: 100%;
   box-sizing: border-box;
 }
 
@@ -313,22 +313,28 @@ h1 {
 
 @media (max-width: 1200px) {
   .board-wrapper {
-    height: calc(100vh - 80px);
+    height: calc(100vh - 176px) !important;
+    overflow-y: auto !important;
+    min-height: 0 !important;
   }
 
   .board-container {
-    height: 100%;
+    height: 100% !important;
+    overflow-y: auto !important;
+    min-height: 0 !important;
   }
 }
 
 @media (max-width: 768px) {
   .board-wrapper {
-    overflow: auto;
+    overflow-y: auto !important;
+    height: calc(100vh - 176px) !important;
   }
 
   .board-container {
     padding: 16px;
     padding-right: 0;
+    height: 100% !important;
   }
 
   .board-header {
