--- a/src/app/main-pages/task-create-form/task-create-form.component.scss
+++ b/src/app/main-pages/task-create-form/task-create-form.component.scss
@@ -500,7 +500,9 @@ input.ng-invalid.ng-touched {
 
 @media(max-width: 1200px){
     section{
-        height: calc(100vh - 176px);
+        height: calc(100vh - 176px) !important;
+        overflow-y: auto !important;
+        min-height: 0 !important;
     }
 }
 
